--- a/catalog.html
+++ b/catalog.html
@@ -66,15 +66,15 @@
         <button type="submit">Показать</button>
       </form>
     </section>
-    
+
     <section>
       <h2>Результаты поиска</h2>
       <p>Найдено <output>3</output></p>
       <p>Сортировка:</p>
       <ul>
         <li>по цене</li>
-        <li href="#">по типу</li>
-        <li href="#">по рейтингу</li>
+        <li>по типу</li> <!--button?-->
+        <li>по рейтингу</li>
       </ul>
       <!--можно ли эту верхнюю часть от h2 до  списка сортировки объеденить в заголовочную часть секции - header?-->
       <ul>
