--- a/catalog.html
+++ b/catalog.html
@@ -28,8 +28,9 @@
   </header>
 
   <main>
+    <h1>Найти жилье в Седоне</h1>
     <section>
-      <h2>Поиск отеля в Седоне</h2>
+      <h2>Параметры поиска жилья</h2>
       <form action="https://echo.htmlacademy.ru/" method="GET">
         <fieldset>
           <legend>Инфраструктура</legend>
@@ -69,46 +70,63 @@
 
     <section>
       <h2>Результаты поиска</h2>
-      <p>Найдено <output>3</output></p>
+      <p>Найдено 
+        <output>3</output>
+      </p>
       <p>Сортировка:</p>
       <ul>
         <li>по цене</li>
         <li>по типу</li> <!--button?-->
         <li>по рейтингу</li>
       </ul>
+      <span></span><!--сортировать по возрастанию параметра-->
+      <span></span><!--сортировать по убыванию-->
+
       <!--можно ли эту верхнюю часть от h2 до  списка сортировки объеденить в заголовочную часть секции - header?-->
       <ul>
         <li>
           <article>
             <h3>Amara Resort & Spa</h3>
             <img src="#" alt="Фото гостиницы Amara Resort & Spa">
+            <span></span><!--звездность жилья-->
             <p>Гостиница 
               <span>от 4000р.</span>
             </p>
             <a href="#">Подробнее</a>
             <button>Забронировать</button>
+            <p>Рейтинг: 
+              <span>8,5</span>
+            </p>
           </article>
         </li>
         <li>
           <article>
             <h3>Desert Quail Inn</h3>
             <img src="#" alt="Фото мотеля Desert Quail Inn">
+            <span></span><!--звездность жилья-->
             <p>Мотель 
               <span>от 3000р.</span>
             </p>
             <a href="#">Подробнее</a>
             <button>Забронировать</button>
+            <p>Рейтинг: 
+              <span>8,9</span>
+            </p>
           </article>
         </li>
         <li>
           <article>
             <h3>Villas At Poco Diablo</h3>
             <img src="#" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории с зеленой лужайкой">
+            <span></span><!--звездность жилья-->
             <p>Апартаменты 
               <span>от 2000р.</span>
             </p>
             <a href="#">Подробнее</a>
             <button>Забронировать</button>
+            <p>Рейтинг: 
+              <span>9,2</span>
+            </p>
           </article>
         </li>
       </ul>
