заменяет span на button
и помарки с последним абзацем

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
       <h1>Добро пожаловать в прекрасную Седону</h1>
       <section>
-        <strong>Небольшой городок в Аризоне, заслуживающий большего!</strong> <!-- strong?  -->
+        <strong>Небольшой городок в Аризоне, заслуживающий большего!</strong>
         <h2>Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон</h2>
         <ul>
           <li>
@@ -94,15 +94,15 @@
           </p>
           <p>
             <label for="hotel-search-adults">Взрослые:</label>
-            <span>-</span>
+            <button>-</button>
             <input id="hotel-search-adults" type="number" name="adults">
-            <span>+</span>
+            <button>+</button>
           </p>
           <p>
             <label for="hotel-search-children">Дети:</label>
-            <span>-</span>
+            <button>-</button>
             <input id="hotel-search-children" type="number" name="children">
-            <span>+</span>
+            <button>+</button>
           </p>
           <button type="submit">Найти</button>
         </form>
@@ -138,11 +138,12 @@
         </ul>
       </section>
 
-      <p>website by
+      <p>
+        website by
         <a href="https://htmlacademy.ru">
           <img src="#" alt="Логотип HTML-академии">
         </a>
       </p>
     </footer>
   </body>
-</html>
+</html>button
