--- a/index.html
+++ b/index.html
@@ -118,9 +118,10 @@
       <section>
         <h2>Контакты</h2>
         <p>#visitsedona</p>
-        <address>тел: 
+        <p>
+          тел: 
           <a href="tel:+74956660166">+7 (495) 666-01-66</a>
-        </address>
+        </p>
       </section>
 
       <section>
