--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <h3>Там есть мост дьявола</h3>
             <span>- №2 -</span>
             <p>Да! По нему можно пройти! Если конечно вы осмелитесь</p>
+            <img src="#" alt="Фото моста дьявола: скальная арка над долиной каньонов">
           </li>
           <li>
             <h3>Небольшая площадь</h3>
