изменение ссылки в подвале
ссылка по техзаданию - на  интенсивы html-academy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <a>
-        <img src="#" alt="Логотип штата Седона">
+        <img src="#" alt="Логотип города Седона">
       </a>
       <nav>
         <ul>
@@ -142,7 +142,7 @@
 
       <p>
         website by
-        <a href="https://htmlacademy.ru">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="#" alt="Логотип HTML-академии">
         </a>
       </p>
