--- a/catalog.html
+++ b/catalog.html
@@ -132,7 +132,7 @@
         <li>
           <article>
             <h3>Villas At Poco Diablo</h3>
-            <img src="#" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории с зеленой лужайкой">
+            <img src="#" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории">
             <span></span><!--звездность жилья-->
             <p>
               Апартаменты 
