--- a/catalog.html
+++ b/catalog.html
@@ -104,10 +104,7 @@
             </p>
             <a href="#">Подробнее</a>
             <button type="button">Забронировать</button>
-            <p>
-              Рейтинг: 
-              <span>8,5</span>
-            </p>
+            <p>Рейтинг: 8,5</p>
           </article>
         </li>
 
@@ -122,10 +119,7 @@
             </p>
             <a href="#">Подробнее</a>
             <button type="button">Забронировать</button>
-            <p>
-              Рейтинг: 
-              <span>8,9</span>
-            </p>
+            <p>Рейтинг: 8,9</p>
           </article>
         </li>
 
@@ -140,10 +134,7 @@
             </p>
             <a href="#">Подробнее</a>
             <button type="button">Забронировать</button>
-            <p>
-              Рейтинг: 
-              <span>9,2</span>
-            </p>
+            <p>Рейтинг: 9,2</p>
           </article>
         </li>
       </ul>
