--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/152.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
     <header>
       <a>
-        <img src="#" alt="Логотип города Седона">
+        <img src="img/logo/sedona-logo.svg" width="138" height="70" alt="Логотип города Седона" >
       </a>
       <nav>
         <ul>
@@ -37,7 +41,7 @@
             <h3>Настоящий городок</h3>
             <span>- №1 -</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="#" alt="Фото улицы города Седона">
+            <img src="img/sedona.jpg" width="800" height="256" alt="Фото улицы города Седона">
             <ul>
               <li>
                 <b>Жильё</b>
@@ -57,7 +61,7 @@
             <h3>Там есть мост дьявола</h3>
             <span>- №2 -</span>
             <p>Да! По нему можно пройти! Если конечно вы осмелитесь</p>
-            <img src="#" alt="Фото моста дьявола: скальная арка над долиной каньонов">
+            <img src="img/devils-bridge.jpg" width="800" height="256" alt="Фото моста дьявола: скальная арка над долиной каньонов">
           </li>
           <li>
             <h3>Небольшая площадь</h3>
@@ -143,7 +147,7 @@
       <p>
         website by
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="#" alt="Логотип HTML-академии">
+          <img src="img/logo/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML-академии">
         </a>
       </p>
     </footer>
