--- a/catalog.html
+++ b/catalog.html
@@ -2,12 +2,16 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/152.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Гостиницы в Седоне</title>
 </head>
 <body>
   <header>
     <a href="index.html">
-      <img src="#" alt="Логотип города Седона">
+      <img src="img/logo/sedona-logo.svg" width="138" height="70" alt="Логотип города Седона">
     </a>
     <nav>
       <ul>
@@ -96,7 +100,7 @@
         <li>
           <article>
             <h3>Amara Resort & Spa</h3>
-            <img src="#" alt="Фото гостиницы Amara Resort & Spa">
+            <img src="img/hotels/amara-resort.png" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
             <span></span><!--звездность жилья-->
             <p>
               Гостиница 
@@ -111,7 +115,7 @@
         <li>
           <article>
             <h3>Desert Quail Inn</h3>
-            <img src="#" alt="Фото мотеля Desert Quail Inn">
+            <img src="img/hotels/desert-quail-inn.png" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
             <span></span><!--звездность жилья-->
             <p>
               Мотель 
@@ -126,7 +130,7 @@
         <li>
           <article>
             <h3>Villas At Poco Diablo</h3>
-            <img src="#" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории">
+            <img src="img/hotels/villas-at-poco-diablo.png" width="135" height="90" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории">
             <span></span><!--звездность жилья-->
             <p>
               Апартаменты 
@@ -167,7 +171,7 @@
     <p>
       website by
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="#" alt="Логотип HTML-академии">
+        <img src="img/logo/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML-академии">
       </a>
     </p>
   </footer>
