--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
         <li>
           <article>
             <h3>Amara Resort & Spa</h3>
-            <img src="img/hotels/amara-resort.png" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
+            <img src="img/hotels/amara-resort.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
             <span></span><!--звездность жилья-->
             <p>
               Гостиница 
@@ -115,7 +115,7 @@
         <li>
           <article>
             <h3>Desert Quail Inn</h3>
-            <img src="img/hotels/desert-quail-inn.png" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
+            <img src="img/hotels/desert-quail-inn.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
             <span></span><!--звездность жилья-->
             <p>
               Мотель 
@@ -130,7 +130,7 @@
         <li>
           <article>
             <h3>Villas At Poco Diablo</h3>
-            <img src="img/hotels/villas-at-poco-diablo.png" width="135" height="90" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории">
+            <img src="img/hotels/villas-at-poco-diablo.jpg" width="135" height="90" alt="Фото апартаментов Villas At Poco Diablo и прилегающей территории">
             <span></span><!--звездность жилья-->
             <p>
               Апартаменты 
