--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="img/logo/sedona-logo.svg" width="138" height="70" alt="Логотип города Седона">
+      <img src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона">
     </a>
     <nav>
       <ul>
@@ -171,7 +171,7 @@
     <p>
       website by
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML-академии">
+        <img src="img/logo/htmlacademy.svg" width="115" height="41" alt="Логотип HTML-академии">
       </a>
     </p>
   </footer>
