--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <a>
-        <img src="img/logo/sedona-logo.svg" width="138" height="70" alt="Логотип города Седона" >
+        <img src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона" >
       </a>
       <nav>
         <ul>
@@ -115,7 +115,7 @@
 
       <section>
         <h2>Карта города Седона</h2>
-        <!--Здесь будет карта-->
+        <img src="img/map.png" width="1200" height="594" alt="Карта города Седона и его окрестностей">
       </section>
     </main>
     <footer>
@@ -147,7 +147,7 @@
       <p>
         website by
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML-академии">
+          <img src="img/logo/htmlacademy.svg" width="115" height="41" alt="Логотип HTML-академии">
         </a>
       </p>
     </footer>
