--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/152.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preload" href="fonts/PTSans-Bold.woff2">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body class="page-body">
@@ -116,7 +117,7 @@
       </section>
 
       <section>
-        <h2>Карта города Седона</h2>
+        <h2 class="visually-hidden">Карта города Седона</h2>
         <img src="img/map.png" width="1200" height="594" alt="Карта города Седона и его окрестностей">
       </section>
     </main>
