--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <nav>
         <ul class="navigation-list">
           <li>
-            <a class="navigation-item-link" href="#">Информация</a>
+            <a class="navigation-link" href="#">Информация</a>
           </li>
           <li>
-            <a class="navigation-item-link" href="#">Фото и видео</a>
+            <a class="navigation-link" href="#">Фото и видео</a>
           </li>
           <li>
-            <a class="navigation-item-link" href="#">Карта штата</a>
+            <a class="navigation-link" href="#">Карта штата</a>
           </li>
           <li>
-            <a class="navigation-item-link" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -37,49 +37,50 @@
     <main> <!--class="main-content"  class="welcome-section"-->
       <h1 class="visually-hidden">Добро пожаловать в прекрасную Седону</h1>
       <section>  <!-- class="advantages-section"-->
+       <!-- <div class="hero"></div>  или welcome -->
         <strong class="heading">Небольшой городок в Аризоне, заслуживающий большего!</strong>
         <h2 class="text">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон</h2>
         <ul class="advantages-list">
           <li class="advantages-item advantages-item-accent">
-            <h3 class="advantages-item-title">Настоящий городок</h3>
-            <span class="advantages-item-text">- №1 -</span>
-            <p class="advantages-item-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <span class="advantages-text">- №1 -</span>
+            <p class="advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="img/sedona.jpg" width="800" height="256" alt="Фото улицы города Седона">
             <ul class="city-features-list">
               <li class="features-item features-item-house">
-                <b class="advantages-item-title">Жильё</b>
-                <p class="advantages-item-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <b class="advantages-title">Жильё</b>
+                <p class="advantages-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="features-item features-item-food">
-                <b class="advantages-item-title">Еда</b>
-                <p class="advantages-item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                <b class="advantages-title">Еда</b>
+                <p class="advantages-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="features-item features-item-present">
-                <b class="advantages-item-title">Сувениры</b>
-                <p class="advantages-item-text">Не только китайского, но и местного производства!</p>
+                <b class="advantages-title">Сувениры</b>
+                <p class="advantages-text">Не только китайского, но и местного производства!</p>
               </li>
             </ul>
           </li>
           <li class="advantages-item advantages-item-accent">
-            <h3 class="advantages-item-title">Там есть мост дьявола</h3>
-            <span class="advantages-item-text">- №2 -</span>
-            <p class="advantages-item-text">Да! По нему можно пройти! Если конечно вы осмелитесь</p>
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <span class="advantages-text">- №2 -</span>
+            <p class="advantages-text">Да! По нему можно пройти! Если конечно вы осмелитесь</p>
             <img src="img/devils-bridge.jpg" width="800" height="256" alt="Фото моста дьявола: скальная арка над долиной каньонов">
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-item-title">Небольшая площадь</h3>
-            <span class="advantages-item-text">- №3 -</span>
-            <p class="advantages-item-text">Все достопримечательности находятся близко</p>
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <span class="advantages-text">- №3 -</span>
+            <p class="advantages-text">Все достопримечательности находятся близко</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-item-title">Красивая дорога</h3>
-            <span class="advantages-item-text">- №4 -</span>
-            <p class="advantages-item-text">Ехать из Лас-Вегаса совсем не скучно!</p>
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <span class="advantages-text">- №4 -</span>
+            <p class="advantages-text">Ехать из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-item-title">Мало туристов</h3>
-            <span class="advantages-item-text">- №5 -</span>
-            <p class="advantages-item-text">Большинство едут в Гранд Каньон и толпится там</p>
+            <h3 class="advantages-title">Мало туристов</h3>
+            <span class="advantages-text">- №5 -</span>
+            <p class="advantages-text">Большинство едут в Гранд Каньон и толпится там</p>
           </li>
         </ul>
       </section>
@@ -93,12 +94,12 @@
           <p>
             <label for="hotel-search-checkin"> Дата заезда</label>
             <input class="hotel-search-input"  id="hotel-search-checkin" type="text" name="checkin-date" placeholder="24 апреля 2017">
-            <button class="date-button" type="button"></button>
+            <button class="calendar-button" type="button"></button>
           </p>
           <p>
             <label for="hotel-search-checkout"> Дата заезда</label>
             <input class="hotel-search-input" id="hotel-search-checkout" type="text" name="checkout-date" placeholder="4 июля 2017">
-            <button class="date-button" type="button"></button>
+            <button class="calendar-button" type="button"></button>
           </p>
           <p>
             <label for="hotel-search-adults">Взрослые:</label>
@@ -121,8 +122,8 @@
         <img src="img/map.png" width="1200" height="594" alt="Карта города Седона и его окрестностей">
       </section>
     </main>
+   
     <footer>
-
       <section>
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts-text">#visitsedona</p>
