--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     </header>
     
     <main> <!--class="main-content"  class="welcome-section"-->
-      <h1 class="visually-hidden">Добро пожаловать в прекрасную Седону</h1>
+      <h1 class="hero">
+        <span class="visually-hidden">Добро пожаловать в прекрасную Седону</span>
+      </h1>
       <section>  <!-- class="advantages-section"-->
        <!-- <div class="hero"></div>  или welcome -->
         <strong class="heading">Небольшой городок в Аризоне, заслуживающий большего!</strong>
