--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,10 @@
   <link rel="apple-touch-icon" href="img/favicon/180.png">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
-
+  <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/catalog.css">
   <title>Гостиницы в Седоне</title>
 </head>
 <body class="page-body inner-page">
@@ -27,7 +30,7 @@
           <a class="navigation-link" href="#">Карта штата</a>
         </li>
         <li>
-          <a class="navigation-link navigation-link-checked">Гостиницы</a>
+          <a class="navigation-link navigation-link-current">Гостиницы</a>
         </li>
       </ul>
     </nav>
