стилизация внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -127,8 +127,8 @@
               Гостиница 
               <span>от 4000р.</span>
             </p>
-            <a class="button result-link" href="#">Подробнее</a>
-            <button class="button result-button" type="button">Забронировать</button>
+            <a class="button button-blue result-link" href="#">Подробнее</a>
+            <button class="button button-brown result-button" type="button">Забронировать</button>
             <p class="result-rating">Рейтинг: 8,5</p>
           </article>
         </li>
@@ -142,8 +142,8 @@
               Мотель 
               <span>от 3000р.</span>
             </p>
-            <a class="button result-link" href="#">Подробнее</a>
-            <button class="button result-button" type="button">Забронировать</button>
+            <a class="button button-blue result-link" href="#">Подробнее</a>
+            <button class="button button-brown result-button" type="button">Забронировать</button>
             <p class="result-rating">Рейтинг: 8,9</p>
           </article>
         </li>
@@ -157,8 +157,8 @@
               Апартаменты 
               <span>от 2000р.</span>
             </p>
-            <a class="button result-link" href="#">Подробнее</a>
-            <button class="button result-button" type="button">Забронировать</button>
+            <a class="button button-blue result-link" href="#">Подробнее</a>
+            <button class="button button-brown result-button" type="button">Забронировать</button>
             <p class="result-rating">Рейтинг: 9,2</p>
           </article>
         </li>
