--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="fonts/PTSans-Bold.woff2" as="font">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/grid.css"> -->
+    <link rel="stylesheet" href="css/grid.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body class="page-body">
@@ -98,7 +98,7 @@
         <h2 class="visually-hidden">Найти гостиницу в Седоне</h2>
         <b class="hotel-search-slogan">Заинтересовались?</b>
         <p class="text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="button form-control-button" type="button">Поиск гостиницы в Седоне</button>
+        <button class="button button-brown form-control-button" type="button">Поиск гостиницы в Седоне</button>
         <form class="hotel-search-form" name="hotel-search-form" method="get" action="https://echo.htmlacademy.ru/">
           <p>
             <label for="hotel-search-checkin"> Дата заезда</label>
@@ -122,7 +122,7 @@
             <input class="hotel-search-input" id="hotel-search-children" type="number" name="children">
             <button>+</button>
           </p>
-          <button class="button form-submit-button" type="submit">Найти</button>
+          <button class="button button-blue hotel-search-submit-button" type="submit">Найти</button>
         </form>
       </section>
 
