--- a/catalog.html
+++ b/catalog.html
@@ -139,7 +139,7 @@
                 Гостиница 
                 <span>от 4000р.</span>
               </p>
-              <div class="result-buttons-wrap">
+              <div class="result-buttons-wrap"> <!--здесь будет флекс-->>
                 <a class="button button-blue result-link" href="#">Подробнее</a>
                 <button class="button button-brown result-button" type="button">Забронировать</button>
               </div>
