--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <title>Гостиницы в Седоне</title>
 </head>
 <body class="page-body catalog-page">
-  <div class="container">
+  <div class="page-wrap container">
     <header class="main-header">
       <a href="index.html">
         <img class="main-header-logo" src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона">
@@ -139,7 +139,7 @@
                 Гостиница 
                 <span>от 4000р.</span>
               </p>
-              <div class="result-buttons-wrap"> <!--здесь будет флекс-->>
+              <div class="result-buttons-wrap"> <!--здесь будет флекс-->
                 <a class="button button-blue result-link" href="#">Подробнее</a>
                 <button class="button button-brown result-button" type="button">Забронировать</button>
               </div>
