:heavy_check_mark: Сборка #8

--- a/8/catalog.html
+++ b/8/catalog.html
@@ -14,7 +14,7 @@
   <base href="https://htmlacademy-htmlcss.github.io/1466653-sedona-30/8/">
 </head>
 <body class="page-body catalog-page">
-  <div class="container">
+  <div class="page-wrap container">
     <header class="main-header">
       <a href="index.html">
         <img class="main-header-logo" src="img/logo/sedona.svg" width="138" height="70" alt="Логотип города Седона">
@@ -140,7 +140,7 @@
                 Гостиница 
                 <span>от 4000р.</span>
               </p>
-              <div class="result-buttons-wrap"> <!--здесь будет флекс-->>
+              <div class="result-buttons-wrap"> <!--здесь будет флекс-->
                 <a class="button button-blue result-link" href="#">Подробнее</a>
                 <button class="button button-brown result-button" type="button">Забронировать</button>
               </div>
